Add multiplication quiz

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+:root {
+  --red: #4E2E2C;
+  --green: #A0A05D;
+  --blue: #34556B;
+  --dark: #2A2828;
+  --light: #C3C4C0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--dark);
+  color: var(--light);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+input {
+  caret-color: var(--light);
+  color: var(--light);
+  outline: none;
+  border: 0.45vmin solid transparent;
+}
+
+input:not(:focus) {
+  border: 0.45vmin dashed var(--light);
+}
+
+input::selection {
+  background: var(--light);
+  color: var(--dark);
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
